--- a/tpl/css/media_embed.css
+++ b/tpl/css/media_embed.css
@@ -326,11 +326,22 @@
 	opacity: 0;
 }
 
+.media_embed.spooncast-embed {
+	padding-bottom: 100% !important;
+}
+.media_embed.spooncast-embed img {
+	width: 100% !important; height: auto !important;
+}
+
 .media_embed.spotify-embed {
 	display: inline-block; padding-bottom: 0;
 }
 .media_embed.spotify-embed img {
 	display: none;
+}
+
+.media_embed.suno-embed {
+	padding-bottom: 128% !important;
 }
 
 .media_embed.tenor-video-embed {
@@ -397,7 +408,7 @@
 .media_embed.twitter-status > iframe,
 .media_embed.twitter-list > iframe,
 .media_embed.twitter-profile > iframe {
-	position:inherit;
+	position: inherit;
 }
 .media_embed.twitter-status {
 	border-bottom: none;
