--- a/libs/src/css/audio_player.css
+++ b/libs/src/css/audio_player.css
@@ -13,37 +13,36 @@ button {
 	cursor: pointer;
 }
 
-.video-player-wrapper {
+.audio-player-wrapper {
 	position: relative;
 	height: 100vh;
 	overflow: hidden;
+	background-size: contain; background-repeat: no-repeat; background-position: center;
 }
-.video-player-wrapper.out {
+.audio-player-wrapper.out {
 	cursor: none;
 }
 
-.video-player {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+.audio-player {
+	position: absolute; top: 0; left: 0;
+	width: 100%; height: 100%;
 	object-fit: cover;
+	opacity: 0;
 }
-	.video-player:focus {
+	.audio-player:focus {
 		outline: none;
 	}
 
-.video-player-header {
+.audio-player-header {
 	position: absolute; top: 0; left: 0; width: 100%; padding: 1rem 1rem 0;
 	display: flex; justify-content: space-between; align-items: center;
 	text-shadow: -1px 0 #666, 0 1px #666, 1px 0 #666, 0 -1px #666;
 	opacity: 1; transition: opacity 1.2s ease-in-out;
 }
-.video-player-header.out {
+.audio-player-header.out {
 	opacity: 0;
 }
-	.video-player-header h2 {
+	.audio-player-header h2 {
 		font-size: 16px; color: #f9f9f9;
 		overflow: hidden; white-space: nowrap; text-overflow: ellipsis; line-height: 1.6;
 	}
@@ -75,7 +74,7 @@ button {
 	opacity: 0;
 }
 
-.video-player-controls {
+.audio-player-controls {
 	position: absolute;
 	bottom: 0;
 	left: 0;
@@ -83,13 +82,9 @@ button {
 	padding: 0 1.25rem;
 	background: linear-gradient(
 		to top,
-		rgba(0, 0, 0, 0.4),
+		rgba(0, 0, 0, 1),
 		rgba(255, 255, 255, 0)
 	);
-	opacity: 1; transition: opacity 1.2s ease-in-out;
-}
-.video-player-controls.out {
-	opacity: 0;
 }
 	.progress-section {
 		padding: 0.5rem 0;
@@ -181,7 +176,7 @@ button {
 				color: #fff;
 			}
 
-.video-player-loading {
+.audio-player-loading {
 	position: absolute;
 	top: calc(50% - 24px);
 	left: calc(50% - 24px);
@@ -203,64 +198,64 @@ button {
 		}
 	}
 
-.video-list-container {
+.audio-list-container {
 	position: absolute; top: 44px; right: 0;
 	width: 360px; max-width: 100%; height: calc(100% - 44px);
 	background-color: rgba(0, 0, 0, 0.4); border-top-left-radius: 4px; border-bottom-left-radius: 4px; overflow-y: auto;
 	font-size: 12px; color: #bbb;
 	transform: translateX(0); transition: transform .8s ease-in-out;
 }
-	.video-list-container::-webkit-scrollbar {
+	.audio-list-container::-webkit-scrollbar {
 		width: 10px;
 	}
-	.video-list-container::-webkit-scrollbar-track {
+	.audio-list-container::-webkit-scrollbar-track {
 		background: transparent;
 	}
-	.video-list-container::-webkit-scrollbar-thumb {
+	.audio-list-container::-webkit-scrollbar-thumb {
 		background: transparent; border-radius: 4px;
 	}
-	.video-list-container:hover::-webkit-scrollbar-thumb {
+	.audio-list-container:hover::-webkit-scrollbar-thumb {
 		background: #333;
 	}
-.video-list-container.out {
+.audio-list-container.out {
 	transform: translateX(100%);
 }
-	.video-list-container ul {
+	.audio-list-container ul {
 		list-style: none;
 		display: flex; flex-direction: column;
 	}
-		.video-list-container li {
+		.audio-list-container li {
 			display: flex; align-items: center; justify-content: space-between; gap: 12px;
 			padding: 8px 12px 8px 16px;
 			cursor: pointer;
 			transition: all .4s;
 		}
-		.video-list-container li.is-playing,
-		.video-list-container li:hover {
+		.audio-list-container li.is-playing,
+		.audio-list-container li:hover {
 			background-color: rgba(255, 255, 255, 0.2) !important;
 			box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.2);
 		}
-			.video-list-container .image-wrapper {
+			.audio-list-container .image-wrapper {
 				position: relative; display: flex; width: 32px; height: 32px;
 			}
-				.video-list-container .image-wrapper img {
+				.audio-list-container .image-wrapper img {
 					width: 100%; object-fit: cover;
 				}
-				.video-list-container .image-wrapper::after {
+				.audio-list-container .image-wrapper::after {
 					content: "\f04b"; font-family: "Font Awesome 5 Free"; font-weight: bold;
 					position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
 					font-size: 16px; color: rgba(255, 255, 255, 0.6); text-shadow: 0px 0px 8px #000;
 					opacity: 0; transition: opacity .4s;
 				}
-				.video-list-container li.is-playing .image-wrapper::after,
-				.video-list-container li:hover .image-wrapper::after {
+				.audio-list-container li.is-playing .image-wrapper::after,
+				.audio-list-container li:hover .image-wrapper::after {
 					opacity: 1;
 				}
-			.video-list-container strong {
+			.audio-list-container strong {
 				flex: 1;
 				overflow: hidden; white-space: nowrap; text-overflow: ellipsis;
 			}
-			.video-list-container .duration-time {
+			.audio-list-container .duration-time {
 				font-size: 10px; color: #999;
 			}
 
@@ -332,9 +327,9 @@ button {
 .fs-btn::before {
 	content: "\f065";
 }
-	.video-player-wrapper:not(.full-screen) .fs-btn::before {
+	.audio-player-wrapper:not(.full-screen) .fs-btn::before {
 		content: "\f065";
 	}
-	.video-player-wrapper.full-screen .fs-btn::before {
+	.audio-player-wrapper.full-screen .fs-btn::before {
 		content: "\f066";
 	}
